<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/cardBgColor"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_calendar_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/previous_month"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="left"
            android:padding="8dp"
            android:src="@drawable/custom_back" />

        <uz.fido.utils.view.custom_text_view.TextViewMedium
            android:id="@+id/display_current_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="@color/blackColor"
            tools:text="CurDate" />

        <ImageView
            android:id="@+id/next_month"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:src="@drawable/custom_next" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_calendar_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <uz.fido.utils.view.custom_text_view.TextViewMedium
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sun"
            android:textColor="#03A9F4"
            android:textStyle="bold" />

        <uz.fido.utils.view.custom_text_view.TextViewMedium
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="#03A9F4"
            android:textStyle="bold" />

        <uz.fido.utils.view.custom_text_view.TextViewMedium
            android:id="@+id/tue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="#03A9F4"
            android:textStyle="bold" />

        <uz.fido.utils.view.custom_text_view.TextViewMedium
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="#03A9F4"
            android:textStyle="bold" />

        <uz.fido.utils.view.custom_text_view.TextViewMedium
            android:id="@+id/thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thu"
            android:textColor="#03A9F4"
            android:textStyle="bold" />

        <uz.fido.utils.view.custom_text_view.TextViewMedium
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="#03A9F4"
            android:textStyle="bold" />

        <uz.fido.utils.view.custom_text_view.TextViewMedium
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sat"
            android:textColor="#03A9F4"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="false"
        android:nestedScrollingEnabled="false"
        android:numColumns="7"
        tools:animateLayoutChanges="false"
        tools:listitem="@layout/calendarview_cell" />

</androidx.appcompat.widget.LinearLayoutCompat>