<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@drawable/cornered_bg_12dp"
    android:elevation="2dp"
    android:minWidth="320dp">

    <uz.fido.utils.view.custom_text_view.TextViewMedium
        android:id="@+id/tv_title"
        style="@style/dialog_header_style"
        android:textSize="20sp"
        android:text="@string/update_downloaded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="240dp"
        android:layout_height="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:lottie_fileName="restart_anim.json"
        app:lottie_loop="true" />

    <uz.fido.utils.view.custom_text_view.TextViewMedium
        android:id="@+id/cancel"
        style="@style/dialog_button_style"
        android:text="@string/cancel"
        android:textColor="@color/blackColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reopen"
        app:layout_constraintTop_toBottomOf="@+id/animation_view" />

    <uz.fido.utils.view.custom_text_view.TextViewMedium
        android:id="@+id/reopen"
        style="@style/dialog_button_style"
        android:text="@string/reopen"
        android:textColor="@color/status_identified"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animation_view" />

</androidx.constraintlayout.widget.ConstraintLayout>